added models, fixed makefile, added ui

--- a/src/GUI/3DViewer/CMakeLists.txt
+++ b/src/GUI/3DViewer/CMakeLists.txt
@@ -17,6 +17,7 @@ set(PROJECT_SOURCES
         viewer.cpp
         viewer.h
         viewer.ui
+        resources.qrc
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
