now it is possible to build via make install

--- a/src/GUI/3DViewer/CMakeLists.txt
+++ b/src/GUI/3DViewer/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 
 project(3DViewer VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -11,6 +13,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui)
+find_library(
+            viewer_lib
+            NAMES lib3dviewer 3dviewer
+            HINTS "${CMAKE_SOURCE_DIR}"
+)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -44,6 +52,8 @@ else()
 endif()
 
 target_link_libraries(3DViewer PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(3DViewer PRIVATE Qt${QT_VERSION_MAJOR}::Gui)
+target_link_libraries(3DViewer PRIVATE ${viewer_lib})
 
 set_target_properties(3DViewer PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
