replaced find_package with find_library

--- a/src/GUI/3DViewer/CMakeLists.txt
+++ b/src/GUI/3DViewer/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui)
-find_package(
+find_library(
             viewer_lib
             NAMES lib3dviewer 3dviewer
             HINTS "${CMAKE_SOURCE_DIR}"
