the functions are divided into files, added scroll

--- a/src/GUI/3DViewer/CMakeLists.txt
+++ b/src/GUI/3DViewer/CMakeLists.txt
@@ -33,6 +33,9 @@ find_library(
 set(PROJECT_SOURCES
         main.cpp
         viewer.cpp
+        OpenGLfunctions.cpp
+        saveFormat.cpp
+        saveSettings.cpp
         viewer.h
         viewer.ui
 
