added events without mouse wheel

--- a/src/GUI/3DViewer/CMakeLists.txt
+++ b/src/GUI/3DViewer/CMakeLists.txt
@@ -36,6 +36,7 @@ set(PROJECT_SOURCES
         OpenGLfunctions.cpp
         saveFormat.cpp
         saveSettings.cpp
+        events.cpp
         viewer.h
         viewer.ui
 
